# bitstamp-btcusd-minute-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-github-pages.yml  update-automation.yml
data/recent/: btcusd_bitstamp_1min_latest.csv
data/updates/: btcusd_bitstamp_1min_latest.csv
scripts/: README.md  inspect_data.py  update_data.py
