[tool.poetry]
name = "bitstamp-btcusd-minute-data"
version = "0.1.0"
description = "Daily updates of Bitstamp BTC/USD 1-minute OHLC data, with historical data since 2012"
authors = ["Mourits de Beer <ff137@proton.me>"]
license = "LICENSE"
readme = "README.md"
repository = "https://github.com/ff137/bitstamp-btcusd-minute-data"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.9"

pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"
